--- a/weather_station.yaml
+++ b/weather_station.yaml
@@ -99,7 +99,8 @@ script:
                   - delay: 1s
                   - component.update: wlan_rssi
                   - delay: 1s
-                  - homeassistant.event: esphome.environment_data_updated
+                  - homeassistant.event:
+                      event: esphome.environment_data_updated
             - delay: ${default_update_interval}
 
 ota:
