--- a/alutech_roteo.yaml
+++ b/alutech_roteo.yaml
@@ -438,9 +438,9 @@ script:
       - light.turn_on:
           id: light_strip
           brightness: 100%
-          red: 100%
-          green: !lambda "if(id(remote_control_bool)) return 0.5; else return 0;"
-          blue: !lambda "if(id(remote_control_bool)) return 0.0; else return 0.58;"
+          red: !lambda "if(id(remote_control_bool)) return 0.0; else return 1.0;"
+          green: !lambda "if(id(remote_control_bool)) return 0.98; else return 0;"
+          blue: !lambda "if(id(remote_control_bool)) return 0.78; else return 0.58;"
           effect: !lambda "return effect;"
 
   - id: fx_move_start
