--- a/energy-meter.yaml
+++ b/energy-meter.yaml
@@ -1,12 +1,12 @@
 substitutions:
-  name: "strawberry"
-  friendly_name: "Strawberry"
+  name: "energy-meter"
+  friendly_name: "Energy Meter Stream Server"
 
   # [Project]
   platform: "esp32dev"
   manufacturer: "espressif"
-  project_name: "electicity-meter"
-  version: "1.0.1"
+  project_name: "energy-meter-proxy"
+  version: "1.0.2"
 
   # [TCP]
   port: "23"
@@ -41,6 +41,10 @@ esp32:
 logger:
   baud_rate: 0
 
+
+mdns:
+
+
 # Enable Home Assistant API
 api:
   encryption:
@@ -51,10 +55,10 @@ ota:
     password: !secret strawberry_ota_password
 
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
+  ssid: !secret wifi_iot2_ssid
+  password: !secret wifi_iot2_password
   ap:
-    ssid: "${friendly_name} Fallback Hotspot"
+    ssid: "${name} Fallback Hotspot"
     password: !secret strawberry_fallback_password
 
 captive_portal:
