--- a/kitchen-siren.yaml
+++ b/kitchen-siren.yaml
@@ -1,11 +1,11 @@
 substitutions:
-  name: "melon"
-  friendly_name: "Melon"
+  name: "kitchen-siren"
+  friendly_name: "Kitchen Alarm Siren"
 
   # [Project]
   platform: "d1_mini"
   manufacturer: "lolin"
-  project_name: "siren"
+  project_name: "alarm-siren"
   version: "1.3.1"
 
   # [Buzzer]
@@ -57,6 +57,10 @@ esp8266:
 # Enable logging
 logger:
 
+
+mdns:
+
+
 # Enable Home Assistant API
 api:
   encryption:
@@ -107,7 +111,7 @@ wifi:
   password: !secret wifi_iot_password
   min_auth_mode: WPA2
   ap:
-    ssid: "${friendly_name} Fallback Hotspot"
+    ssid: "${name} Fallback Hotspot"
     password: !secret melon_fallback_password
 
 captive_portal:
